After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686083 - dbus: Fix regression in password changing
dbus: Fix regression in password changing
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
3.6.x
Other All
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-10-13 12:47 UTC by Stef Walter
Modified: 2012-10-15 12:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dbus: Fix regression in password changing (3.58 KB, patch)
2012-10-13 12:47 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-10-13 12:47:42 UTC
When changing a password using seahorse: Got a warning with the internal error 'No user logged in', and the password change would not complete.
Comment 1 Stef Walter 2012-10-13 12:47:45 UTC
Created attachment 226371 [details] [review]
dbus: Fix regression in password changing

 * We didn't unlock the keyring correctly with the old password,
   because we deleted the credential object before trying to set
   the new credential.
 * Also fix several leaks in the password change prompt object.
Comment 2 Stef Walter 2012-10-15 12:16:21 UTC
Attachment 226371 [details] pushed as c9bb11a - dbus: Fix regression in password changing