dbus: Fix regression in password changing

* We didn't unlock the keyring correctly with the old password,
   because we deleted the credential object before trying to set
   the new credential.
 * Also fix several leaks in the password change prompt object.

https://bugzilla.gnome.org/show_bug.cgi?id=686083